--- a/microservice-gateway-zuul/src/main/resources/application.yml
+++ b/microservice-gateway-zuul/src/main/resources/application.yml
@@ -9,7 +9,16 @@ eureka:
       defaultZone: http://user:password123@localhost:8761/eureka
   instance:
     prefer-ip-address: true
+#在zuul代理文件上传服务时，对于大文件上传时间较慢，所以需要配置hystrix和ribbon的超时时间
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
 ribbon:
   ConnectTimeout: 3000
   ReadTimeout: 60000
+# 通过示例配置：用户直接请求zuul携带的敏感的用户信息不会向下传递给微服务
+zuul:
+  routes:
+    users:
+      path: /myusers/**
+      sensitiveHeaders: Cookie,Set-Cookie,Authorization
+      url: http://192.168.85.1:7900/
+  ignore-security-headers: false # 如果classpath中用了soring-secutity,并且希望在zuul后面的微服务中拿到header，启用
