--- a/config-learning/microservice-config-server-eureka/src/main/resources/application.yml
+++ b/config-learning/microservice-config-server-eureka/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     config:
       server:
         git:
-          uri: https://git.oschina.net/it-much/config-repo-51cto-video
+          uri: https://gitee.com/wangzhc/springcloud_config
           username: 
           password: 
   application:
